<resources>
    <string name="app_name">Sundrop</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="partyName">Party Name</string>
    <string name="sundrop">Sundrop</string>
    <string name="party_finder">Party Finder</string>
    <string name="profile">Profile</string>
    <string name="gamer_mode">Gamer Mode</string>
    <string name="invitations">Invitations</string>
    <string name="parties">View Party</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="placeHolderTitle">FILL ON APP START</string>
    <string name="leave_party">Leave Party</string>
    <string name="invite_users">Invite Users</string>
    <string name="see_users">See Users</string>
    <string name="chat_message">Chat Message</string>
    <string name="send">Send</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="display_name">Display Name</string>
    <string name="i_am_looking_for">I am looking for...</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="returnHomeButton">Return</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="active_users">ACTIVE USERS</string>
    <string name="home">Home</string>
    <string name="opt_in">Opt In</string>
    <string name="sent_invites">Sent Invites</string>
    <string name="received_invites">Received Invites</string>
    <string name="partySelectLabel">Party:</string>
    <string name="newParty">New Party</string>
    <string name="existingParty">Existing Party</string>
    <string name="greetings">Greetings</string>
    <string name="create_account">Create Account</string>
    <string name="resend_confirmation_email">Resend Confirmation Email</string>
</resources>