<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_gray">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/sundrop"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/relativeLayoutNavigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/onlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/profileButton"
            android:text="@string/party_finder" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/partySelect"
            android:text="@string/profile" />


        <LinearLayout
            android:id="@+id/partySelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/homeButtonBar"
            android:orientation="horizontal"
            android:weightSum="1">

            <Spinner
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/partySelectSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75" />
            <Button
                android:id="@+id/partyConfirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/parties" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/invitationsButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:text="@string/invitations" />

            <Button
                android:id="@+id/gamerButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gamer_mode" />

            <Button
                android:id="@+id/debugSignOutButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_out" />
        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
