<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Noah Ferrer on 12/19/20 11:31 PM
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Last modified 12/19/20 11:31 PM
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView android:layout_alignParentTop="true"
            android:id="@+id/textViewActiveUsersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_users"
            android:textSize="36sp"
            style="@style/App_EditTextStyle"/>

        <ListView
            android:id="@+id/userDynamicList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/activeUsersBottomBar"
            android:layout_below="@id/textViewActiveUsersTitle"
            android:layout_alignBottom="@id/activeUsersBottomBar"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:drawSelectorOnTop="false">

        </ListView>

        <LinearLayout android:layout_alignParentBottom="true"
            android:id="@+id/activeUsersBottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/optIn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/opt_in" />
            <Button
                android:id="@+id/home"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/home" />
            <Button
                android:id="@+id/signOut"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_out" />
        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>