<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="279dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sundrop"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title">


        <LinearLayout
            android:id="@+id/selectPartyBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/onlineButton"
            android:orientation="horizontal"
            android:weightSum="1">

            <Spinner
                android:id="@+id/partySelectSpinner"
                style="@style/App_EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/partyConfirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/button_border_transparent"
                android:fontFamily="sans-serif-light"
                android:text="@string/parties"
                android:textColor="@color/colorPrimary"
                tools:layout_editor_absoluteX="312dp"
                tools:layout_editor_absoluteY="615dp" />

        </LinearLayout>

        <Button
            android:id="@+id/onlineButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/profileButton"
            android:background="@drawable/button_border_transparent"
            android:fontFamily="sans-serif-light"
            android:text="@string/party_finder"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottomBar"
            android:background="@drawable/button_border_transparent"
            android:fontFamily="sans-serif-light"
            android:text="@string/profile"
            android:textColor="@color/colorPrimary"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="563dp" />


        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/invitationsButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invitations" />

            <Button
                android:id="@+id/gamerButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gamer_mode" />

            <Button
                android:id="@+id/debugSignOutButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/knownIssuesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Transparent"
        android:fontFamily="sans-serif-light"
        android:text="Known Issues"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
