<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewInvitations"
    android:background="@drawable/gradient_animation">

    <LinearLayout
        android:id="@+id/linearLayoutInvitations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView style = "@style/App_EditTextStyle"
            android:id="@+id/textViewSent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_invites"
            android:textSize="25sp" />

        <ListView
            android:id="@+id/listViewSent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView style = "@style/App_EditTextStyle"
            android:id="@+id/textViewReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/received_invites"
            android:textSize="25sp" />

        <ListView
            android:id="@+id/listViewReceived"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:background="@drawable/button_border_transparent"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorPrimary"
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>